--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "author": "wanglinquan",
   "license": "MIT",
   "scripts": {
-    "docs:dev": "vitepress dev docs",
-    "docs:build": "vitepress build docs",
-    "docs:serve": "vitepress serve docs"
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs",
+    "docs:serve": "vuepress serve docs"
   },
   "devDependencies": {
-    "vitepress": "^0.15.6"
+    "vuepress": "^1.8.2"
   }
 }
